[package]
name = "jito-protos"
version = "0.1.0"
edition = "2024"
description = "Rust gRPC bindings for Jito Labs' MEV system protobuf definitions"
license = "Apache-2.0"
repository = "https://github.com/Astralane/jito-protos"
readme = "README.md"
# Derived from Jito Labs' protobuf definitions (https://github.com/jito-labs).
# See NOTICE for attribution.

[features]
default = ["client", "server", "bytes"]
# Generate gRPC client stubs.
client = []
# Generate gRPC server stubs.
server = []
# Generate proto `bytes` fields as `bytes::Bytes` instead of `Vec<u8>`.
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1.11.1", optional = true }
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["transport"] }

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

[target."cfg(not(windows))".build-dependencies]
protobuf-src = "1.1"
